--- a/css/style.css
+++ b/css/style.css
@@ -223,9 +223,11 @@ header {
     word-break: keep-all;
 }
 
-.list-container { width: 100%; }
 
-.tag-container { display: flex; }
+.tag-container {
+    display: flex;
+    margin-bottom: 1rem;
+}
 
 .tag {
     position: relative;
@@ -284,8 +286,15 @@ select {
     background-color: rgba(0, 0, 0, 0);
 }
 
+.list-container {
+    width: 100%;
+}
+
 #listElement {
-    padding: 12px 16px;
+    position: relative;
+    /*padding: 12px 16px;*/
+    padding : 0px;
+    margin: 0px;
     border: 0.0625rem solid #D7E2EB;
     border-radius: 1rem;
     background-color: #fff;
@@ -294,7 +303,7 @@ select {
 .restaurant-wrapper{
     display: flex;
     position: absolute;
-    width: 1110px;
+    width: 100%;
     height: 66px;
     /* background-color: aqua; */
     /* opacity: .2; */
@@ -328,7 +337,7 @@ select {
 
 .tourist-attraction-list {
     display: flex;
-    padding: 16px 12px 12px;
+    padding: 16px 20px 12px;
     cursor: pointer;
     /* width: 60vw; */
     /* ::marker 없앰 */
@@ -342,7 +351,7 @@ select {
     display: flex;
     width: fit-content;
     height: fit-content;
-    margin-right: 24px; 
+    margin-right: 24px;
     flex-direction: column;
     justify-content: center;
 }
@@ -352,7 +361,7 @@ select {
     font-size: 2rem;
 }
 
-.tourist-attraction-ID, 
+.tourist-attraction-ID,
 .tourist-attraction-StarRating { margin: 0; }
 
 .auctionIDtourist-attraction-ID {
@@ -369,7 +378,8 @@ select {
 }
 
 .solid-line {
-    margin: 0 auto;
+    margin: 0 20px;
+    /*padding: 0 20px;*/
     /* width: 1500px; */
     border: 0;
     border-top: 1px solid #cecece;
@@ -377,9 +387,14 @@ select {
 .solid-line:nth-last-of-type(1) { display: none; }
 
 nav#scrollTop {
-    width: 100%;
-    text-align: center;
+    /*text-align: center;*/
+    margin: 0;
+    padding: 0;
+}
+
+a.scroller {
     cursor: pointer;
+
 }
 
 footer {
