--- a/css/style.css
+++ b/css/style.css
@@ -102,25 +102,67 @@ header {
     cursor: default;
 }
 
-#mainTitle span {
-    color: rgba(255, 255, 255, 0);
-    font-size: 20rem;
-    transition: 2s;
-}
-
 .main-title-element {
     position: absolute;
     width: max-content;
-    color: rgba(0, 0, 0, 0);
-    font-size: 20rem;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0);
+    font-size: 20rem;
+    transition: 2s;
 }
 
 /* #main-title span:hover {
     color: var(--color-white);
     font-size: 13rem;
 } */
+
+.team {
+    position: absolute;
+    top: 73.6%;
+    display: inline-block;
+    margin-left: 114px;
+}
+.team-developers {
+    margin-bottom: 40px;
+}
+.job-group {
+    margin: 0 0 8px 0 ;
+    color: rgba(255, 255, 255, 50%);
+    font-weight: 300;
+}
+.team-developers > ul {
+    margin: 0;
+    padding: 0;
+}
+.developer-name {
+    list-style: none;
+    font-size: 1.125rem;
+    font-weight: 600;
+    margin-bottom: 8px;
+    color: rgba(255, 255, 255, 85%);
+    /*display: inline-block;*/
+    position: relative;
+}
+.developer-name::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color-white);
+    transform-origin: bottom right;
+    transform: scaleX(0);
+    transition: transform 0.25s ease-out;
+}
+.developer-name:hover {
+    cursor: pointer;
+}
+.developer-name:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
 
 .global-width {
     max-width: 1176px;
@@ -293,8 +335,8 @@ select {
 #listElement {
     position: relative;
     /*padding: 12px 16px;*/
-    padding : 0px;
-    margin: 0px;
+    padding : 0;
+    margin: 0;
     border: 0.0625rem solid #D7E2EB;
     border-radius: 1rem;
     background-color: #fff;
