Feat: 개발 명단 클릭 시, github 프로필 페이지 로드

--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,11 @@ header {
     padding: 0;
 }
 .developer-name {
+    margin: 0 0 6px 0;
+    width: fit-content;
     list-style: none;
     font-size: 1.125rem;
     font-weight: 600;
-    margin-bottom: 8px;
     color: rgba(255, 255, 255, 85%);
     /*display: inline-block;*/
     position: relative;
