--- a/css/style.css
+++ b/css/style.css
@@ -45,19 +45,21 @@ header {
 }
 
 .logo-wrapper {
-    position: relative;
     height: 60px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #logo{
-    position: absolute;
-    width: 100%; /* 로고 가운데 정렬 */
+    width: fit-content;
+    margin: 0;
+    text-align: center;
     font-weight: 200;
-    z-index: 999;
+    z-index: 100;
     color: var(--color-white);
-    cursor: default;
-    /* display: inline-block; */
+    cursor: pointer;
 }
 
 #img-container {
@@ -449,6 +451,6 @@ a.scroller {
 
 footer {
     width: 100%;
-    height: 400px;
+    height: 100px;
     border-top: #cecece 1px solid;
 }
