--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ header {
 #img-container {
     display: block;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #000;
     filter: brightness(70%);
     /*background-size: cover;*/
@@ -71,7 +71,7 @@ header {
 #mainImage {
     display: block;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     filter: brightness(70%);
     object-fit: cover;
     transition: all 1s;
@@ -112,7 +112,7 @@ header {
     justify-content: space-between;
     height: 750px;
     top: 7.313rem;  /* 177px */
-    margin-left: 114px;
+    /* margin-left: 10.556vw; */
 }
 
 #teamName,
@@ -224,7 +224,7 @@ header {
 
 .main-city-card {
     position: relative;
-    width: 565px;
+    width: 100%;
     height: 300px;
     padding: 32px 24px;
     border-radius: 2.2rem;
@@ -522,4 +522,81 @@ footer {
     width: 100%;
     height: 100px;
     border-top: #cecece 1px solid;
+}
+
+@media only screen and (min-width: 1080px) {
+    .project-information {
+        margin-left: 10.556vw;
+    }
+}
+
+@media only screen and (max-width: 912px) {
+
+    .card-wrapper {
+        width: 100%;
+        grid-template-columns: 1fr;
+        grid-gap: 16px;
+    }
+
+    .main-city-card {
+        width: 100%;
+        height: 600px;
+    }
+}
+
+@media only screen and (max-width: 480px) { 
+    .global-width {
+        padding: 0;
+    }
+
+    #img-container {
+        width: 100%;
+        height: 70%;
+    }
+    
+    .card-wrapper {
+        grid-template-columns: 1fr;
+        grid-gap: 16px;
+        /* grid-row: 0; */
+    }
+
+    .main-city-card {
+        width: 100%;
+        height: 600px;
+        border-radius: 0;
+        padding: 0;
+    }
+    }
+    
+    .project-information{
+        /* position: absolute; */
+        width: 100%;
+        align-items: center;
+    }
+    
+    .project-introduction {
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .main-city-card-typo-wrapper {
+        padding: 64px 48px 0;
+    }
+
+    .main-city-card-title {
+        font-size: 2.875rem;
+        font-weight: 800;
+        line-height: 1.3;
+        margin-bottom: 20px;
+    }
+
+    .main-city-card-desc {
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 1.3;
+    }
+
+    .fade {
+        height: 600px;
+    }
 }
